2008-08-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-monitor.c: Added black listing. This works
	slightly differently to TRUNK. Files are given a black list count
	for the number of times an event is seen. If a file gets an event
	more than 5 times they are black listed for 30 seconds, after that
	time the item is taken off the black list and the indexer is
	prompted to reindex the file. The 30 second period has to be
	completely clear of events for that file during that time. If an
	event occurs in the mean time, the timestamp is reset.

2008-08-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.[ch]:
	* src/trackerd/tracker-processor.c: Removed TrackerHal
	dependency, it is unused in this module now.

2008-08-04  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-indexer-module.[ch]
	(tracker_indexer_module_file_get_service_type): Call the function
	tracker_module_file_get_service_type in the module. If this
	function doesnt exist, use the module name as service type of the uri.
	* src/tracker-indexer/tracker-indexer.c
	* src/tracker-indexer/tracker-module.h
	* src/tracker-indexer/modules/dummy.c
	* src/tracker-indexer/modules/files.c
	(tracker_module_file_get_service_type): New function to obtain the
	service type of an uri. Implementation in the files module and
	explanation in "dummy" module.
	
2008-08-04  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.[ch]: Make the is_path_ignored()
	function we used internally available externally as an API for the
	processor to call when we get new monitor events. This is to make
	sure we don't monitor files newly created just because they are in
	some directory. They too adhear to the filtering.
	
	* src/trackerd/tracker-daemon.c: Fixed referencing so we now
	actually finalize the daemon and the processor modules.
	
	* src/trackerd/tracker-marshal.list: 
	* src/trackerd/tracker-monitor.c: Added "is_directory" boolean
	to monitor events.
	